--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,15 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
+
     <string name="app_name">CarShare</string>
+    <string name="login">Login</string>
+    <string name="action_settings">Settings</string>
+    <string name="logout">Logout</string>
+    <string name="username">Username</string>
+    <string name="password">Password</string>
+    <string name="title_activity_options">Options</string>
+    <string name="hello_world">Hello world!</string>
+    <string name="radioRider">Search as a rider</string>
+    <string name="radioDriver">Search as a driver</string>
+
 </resources>
