--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
 
     <string name="app_name">CarShare</string>
     <string name="login">Login</string>
+    <string name="loginform">Login Form</string>
     <string name="action_settings">Settings</string>
     <string name="logout">Logout</string>
     <string name="username">Username</string>
